fix: resolve issues #245-249 - build config and documentation improvements
- #246: Remove AI session artifacts from repo root (8 files deleted)
- #247: Lower OWASP CVSS threshold from 7 to 4 (catch medium-severity CVEs)
- #245: Enable Checkstyle and SpotBugs build enforcement (failsOnError=true)
- #248: Document --enable-preview requirement prominently in README
  - Add detailed callout for library consumers
  - Explain preview features used (FFI, pattern matching)
  - Provide Maven configuration example
- #249: Fix Windows PowerShell script classpath issue
  - Add Maven dependency resolution to run-interactive.ps1
  - Include SLF4J and other runtime dependencies

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>